--- a/frontend/stonksapp/src/containers/layout.css
+++ b/frontend/stonksapp/src/containers/layout.css
@@ -13,9 +13,9 @@
   }
 
   .user {
-    width: 140px;
+    width: 200px;
     height: 51px;
-    background: rgba(255, 255, 255, 0.918);
+    color: white;
     float: right;
     margin: 6px 24px 6px 0px;
     text-align: center;
