--- a/frontend/stonksapp/src/components/Strategies.css
+++ b/frontend/stonksapp/src/components/Strategies.css
@@ -1,3 +1,10 @@
 .content{
     margin-bottom: 20px;
 }
+
+.description{
+    text-justify: auto;
+    text-align: justify;
+    border: 2px solid #dbdbdbab;;
+    margin-bottom: 10px;
+}
