--- a/frontend/stonksapp/src/components/Preferences.css
+++ b/frontend/stonksapp/src/components/Preferences.css
@@ -6,3 +6,10 @@
 .h1{
     margin-bottom: 25px;
 }
+.description{
+    text-justify: auto;
+    text-align: justify;
+    border: 2px solid #dbdbdbab;;
+    margin-bottom: 10px;
+    padding: 8px;
+}
