submenu item arrow in stock chart menu now visible

--- a/frontend/stonksapp/src/components/Chart/style.css
+++ b/frontend/stonksapp/src/components/Chart/style.css
@@ -10,3 +10,7 @@
 .highcharts-bindings-wrapper * {
     box-sizing: content-box;
 }
+
+.highcharts-stocktools-toolbar li {
+   width : 80% !important; 
+}
